--- a/GADTECHFrontEnd/pom.xml
+++ b/GADTECHFrontEnd/pom.xml
@@ -63,6 +63,7 @@
 </dependency>
 
 <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
+<dependency>
 <groupId>org.springframework.security</groupId>
 <artifactId>spring-security-config</artifactId>
 <version>4.2.1.RELEASE</version>
